# esip-2025

./: .gitignore  .nojekyll  .pre-commit-config.yaml  LICENSE.txt  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yaml
docs/: _quarto.yml  index.qmd
docs/examples/: 01_AWS_Public_Data_Program_NetCDF.ipynb  02_ESGF_NetCDF_Solution.ipynb
examples/: 01_AWS_Public_Data_Program_NetCDF.html  02_ESGF_NetCDF_Solution.html
site_libs/bootstrap/: bootstrap-793f777464b6e7586329716bbc09d3ef.min.css  bootstrap-dark-f6d2682c229941030a844ddbcc928cfb.min.css
