[project]
name = "virtualizarr-examples"
description = "VirtualiZarr Examples"
authors = [
    {name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "virtualizarr>=2.0.0",
    "ipykernel",
]

dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
license = {text = "MIT License"}
keywords = ["Python", "compressed", "ndimensional-arrays", "zarr"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
