[project]
name = "virtualizarr-examples"
description = "VirtualiZarr Examples"
authors = [
    {name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "virtualizarr>=2.0.0",
]

dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
license = {text = "MIT License"}
keywords = ["Python", "compressed", "ndimensional-arrays", "zarr"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
rasterio = ">=1.4.3,<2"
rioxarray = "*"
xarray = "==2025.6.0"
virtualizarr = "==2.0.0"
ipykernel = ">=6.29.5,<7"
pip = ">=25.1.1,<26"
icechunk = ">=1.0.0,<2"
h5py = ">=3.14.0,<4"
earthaccess = ">=0.12.0,<0.13"
cftime = ">=1.6.4,<2"
